bastion-host/resources/subnets.tf
resource "aws_subnet" "public_sub" {
    vpc_id = aws_vpc.custom_vpc.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "eu-west-1a"

    tags = {
      Name = "nqs-public-subnet"
    }
}

resource "aws_subnet" "private_sub" {
    vpc_id = aws_vpc.custom_vpc.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "eu-west-1b"

    tags = {
      Name = "nqs-private-subnet"
    }
}
