bastion-host/resources/security-group.tf
resource "aws_security_group" "custom_sg" {
  vpc_id = aws_vpc.custom_vpc.id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "nqs-security-group"
  }
}

resource "aws_security_group" "bastion_sg" {
  vpc_id = aws_vpc.custom_vpc.id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${aws_instance.bastion_vm.public_ip}/32"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "nqs-security-group-bastion"
  }
}

resource "aws_security_group" "custom_sg_private" {
  vpc_id = aws_vpc.custom_vpc.id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "nqs-security-group-private"
  }
}
